# apparent

./: .env  .gitignore  Cargo.toml  Makefile.toml  README.md
client/: Cargo.toml  index.html  package-lock.json  package.json  tailwind.config.js
client/src/: app.rs  counter.rs  header.rs  lib.rs  nav.rs  progressbar.rs  queue.rs  table.rs  ws.rs  wsding.rs
client/static/: index.html
server/: .env  Cargo.toml
server/src/: main.rs  ws.rs
shared/: Cargo.toml
shared/src/: lib.rs
