[package]
name = "client"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dev-dependencies]
# wasm-bindgen-test = "0.3.20"

[dependencies]
# console_error_panic_hook = "0.1.6"
# wasm-bindgen = "0.2.70"
# serde_json = "1.0.62"
#serde_derive = "1.0.123"
#serde = "1"
#js-sys = "0.3"
shared = { path = "../shared"}
dominator = "0.5.14"
futures-signals = "0.3.16"
lazy_static = "1.4.0"
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.71"

[dependencies.web-sys]
version = "0.3.47"
# Add more web-sys API's as you need them
features = [
  "Blob",
  "BinaryType",
  "Document",
  "ErrorEvent",
  "FileReader",
  "Headers",
  "HashChangeEvent",
  "History",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Location",
  "ProgressEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "WebSocket",
  "Window",
]
