[package]
name = "client"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[dev-dependencies]
# wasm-bindgen-test = "0.3.20"

[dependencies]
seed = "0.8.0"
shared = { path = "../shared"}
console_error_panic_hook = "0.1.6"
wasm-bindgen = "0.2.72"

anyhow = "1"
serde = "1"
serde_derive = "1"

[dependencies.web-sys]
version = "0.3.49"
# Add more web-sys API's as you need them
features = [
  "Blob",
  "BinaryType",
  "Document",
  "ErrorEvent",
  "FileReader",
  "Headers",
  "HashChangeEvent",
  "History",
  "HtmlInputElement",
  "HtmlTextAreaElement",
  "Location",
  "ProgressEvent",
  "Request",
  "RequestInit",
  "RequestMode",
  "Response",
  "Storage",
  "WebSocket",
  "Window",
]
