[package]
name = "server"
version = "0.1.0"
authors = ["Your Name <email@address.com>"]
edition = "2018"

[dependencies]
actix = "0.10.0"
actix-web = "3.3.2"
actix-files = "0.5.0"
actix-rt = "1.1.1"
dotenv = "0.15.0"

sqlx = { version = "0.4.2", features = [ "postgres", "runtime-actix-rustls" ] }

shared = { path = "../shared" }
